made final changes for now

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ html{
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #000000;
+    background: #0f1113;
   }
   
   /* Handle */
