--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -17,7 +17,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background: #000000;
+    background: #0f1113;
     
     
     
