--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@
 .navbar{
     
 font-family: 'Inter', sans-serif;
-    background: #000000;
+    background: #0f1113;
     overflow: hidden;
     position: sticky;
     top: 0;
