--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,5 @@
 #About{
-    background: #000;
+    background: #0f1113;
     color: aliceblue;
     overflow-x: hidden;
     overflow-y: hidden;
@@ -10,6 +10,8 @@
     align-items: center;
     justify-content: center;
     font-size: 60px;
+    margin-top: 2%;
+    padding: 2%;
     
 }
 .About_head p{
@@ -17,7 +19,7 @@
     
     position: relative;
     margin-bottom: 1%;
-    padding-bottom: 1.5%;
+    padding-bottom: 2%;
 }
 
 .About_head p::after{
@@ -65,6 +67,7 @@
 }
 .About_content_left h1{
     padding-bottom: 5%;
+    
 }
 .About_content_left p{
     padding-bottom: 5%;
@@ -125,12 +128,10 @@
     }
 
     .About_intro p {
-        font-size: 20px;
+        font-size: 14px;
     }
 
-    .About_content_left {
-        font-size: 18px;
-    }
+    
     .About_content {
         flex-direction: column;
     }
@@ -138,6 +139,7 @@
     .About_content_left {
         width: 100%;
         padding: 1% 4%;
+        font-size: 15px;
     }
     .About_content_right {
         left: 45%;
