--- a/src/styles/Projectitem.css
+++ b/src/styles/Projectitem.css
@@ -44,8 +44,16 @@
         flex-direction: column;
         align-items: center;
     }
-    .Project_desc{
+    .Project_desc h3{
         font-size: 20px;
+        padding-bottom: 4%;
+    }
+    .Project_desc {
+        font-size: 16px;
+        padding-bottom: 4%;
+    }
+    .Project_desc p{
+        padding-bottom: 4%;
     }
     
 
